[package]
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
readme = "README.md"
name = "src-ash-carrier"
version = "0.1.0"

[dependencies]

# ARM cortex stuff
cortex-m = "0.6"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
#panic-halt = "0.2.0"
panic-itm = "0.4.1"
nb = "0.1.2"

# Device crates
shared-bus = "0.2.0"
pwm-pca9685 = "0.2.0"

# MISC
scpi = "0.3.3"
heapless = "0.5.5"
arrayvec = {version = "0.5.1", default-features=false}
arraydeque = { version = "0.4", default-features = false }
git-version = "0.3.4"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
nalgebra = {version = "0.21.1", default-features = false}

# STM32F415
libm = "0.2.1"
embedded-hal = "0.2.3"
[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f415"]

# this lets you use `cargo fix`!
[[bin]]
name = "src-ash-carrier"
test = false
bench = false

[profile.dev.package.scpi]
opt-level = 's'

[profile.dev]
#codegen-units = 1 # better optimizations
opt-level = 's'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
opt-level = 's'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
